Pure-js to React

--- a/index.html
+++ b/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <div id="wrapper">
-      <div id="about">
-        <h2>About</h2>
-        <p>Welcome! This is my personal GitHub page. Here I make little projects and tools (not only programming) that could be helpful for everyone.</p>
-      </div>
-      <div id="stuff">
-        <!-- Projects load from JS -->
-        <h2>My projects</h2>
-        <div id="stuff_flex"></div>
-      </div>
-      <div id="footer" style="justify-content: center">
-        <a href="https://github.com/kalmar-adam" target="_blank">Github</a>
-        <!--<a href="#">LinkedIn</a> -->
-      </div>
-    </div>
-    <script src="myjs.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>kalmar-adam.github.io</title><script defer="defer" src="/static/js/main.91f190c7.js"></script><link href="/static/css/main.b62005e3.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
